syntax = "proto3";
package kvrawpb;

message KvPair {
    bytes key = 1;
    bytes value = 2;
}

message RawScanRequest {
    bytes start_key = 1;
    uint32 limit = 2;
    bool key_only = 3;
    string cf = 4;
    bool reverse = 5;
    // For compatibility, when scanning forward, the range to scan is [start_key, end_key), where start_key < end_key;
    // and when scanning backward, it scans [end_key, start_key) in descending order, where end_key < start_key.
    bytes end_key = 6;
}

message RawScanResponse {
    repeated KvPair kvs = 1;
}

message RawGetRequest {
    bytes key = 1;
    string cf = 2;
}

message RawGetResponse {
    string error = 1;
    bytes value = 2;
    bool not_found = 3;
}

message RawPutRequest {
    bytes key = 1;
    bytes value = 2;
    string cf = 3;
}

message RawPutResponse {
    string error = 1;
}

message RawDeleteRequest {
    bytes key = 1;
    string cf = 2;
}

message RawDeleteResponse {
    string error = 1;
}


// Serve as a distributed kv database.
service Tikv {

    // RawKV commands.
    rpc RawGet(kvrawpb.RawGetRequest) returns (kvrawpb.RawGetResponse) {}
    rpc RawPut(kvrawpb.RawPutRequest) returns (kvrawpb.RawPutResponse) {}
    rpc RawDelete(kvrawpb.RawDeleteRequest) returns (kvrawpb.RawDeleteResponse) {}
    rpc RawScan(kvrawpb.RawScanRequest) returns (kvrawpb.RawScanResponse) {}
}
